# westwood-bear-rs

./: Cargo.toml  README.md  rustfmt.toml
examples/: bulk.rs  bulk_async.rs  ping.rs  set_abs_position.rs  set_position.rs  set_position_async.rs  setup_motor.rs
src/: bus.rs  checksum.rs  error.rs  lib.rs
src/instructions/: bulk.rs  mod.rs  multi_write.rs  ping.rs  read.rs  save_config.rs  set_abs_position.rs  write.rs
src/protocol/: bulk_write_data.rs  mod.rs  motor_error.rs  registers.rs  response.rs
src/serial_port/: mod.rs  serial2.rs
tests/: bulk.rs
