[package]
name = "ww-bear"
version = "0.2.1"
edition = "2024"
description = "Communication protocol for Westwood Robotics BEAR actuators"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omelia-iliffe/westwood-bear-rs"
readme = "README.md"
keywords = ["robotics", "actuator", "serial", "embedded", "motor"]
categories = ["embedded", "hardware-support", "no-std"]

[[example]]
name = "set_position"
path = "examples/set_position.rs"
required-features = ["std"]

[[example]]
name = "set_position_async"
path = "examples/set_position_async.rs"
required-features = ["std"]

[[example]]
name = "set_abs_position"
path = "examples/set_abs_position.rs"
required-features = ["std"]

[[example]]
name = "ping"
path = "examples/ping.rs"
required-features = ["std"]

[[example]]
name = "bulk"
path = "examples/bulk.rs"
required-features = ["std"]

[[example]]
name = "bulk_async"
path = "examples/bulk_async.rs"
required-features = ["std"]

[[example]]
name = "setup_motor"
path = "examples/setup_motor.rs"
required-features = ["std"]

[dependencies]
serial2 = { version = "0.2.28", optional = true }
serial2-tokio = { version = "0.1.19", optional = true }
log = "0.4.25"
derive_more = { version = "2", default-features = false, features = [
  "from",
  "error",
  "display",
  "debug",
] }
bitflags = "1"
paste = "1"
strum = { version = "0.27.0", default-features = false, features = ["derive"] }
defmt = { version = "1", optional = true }
bisync = "0.3.0"
tokio = { version = "1.47.1", features = ["time"], optional = true }

[dev-dependencies]
test-log = "0.2.17"
env_logger = "0.11.6"
tokio = { version = "1.47.1", features = [
  "rt",
  "io-std",
  "io-util",
  "macros",
  "time",
] }
clap = { version = "4.6.1", features = ["derive"] }

[features]
default = ["std", "serial2"]
alloc = ["defmt?/alloc"]
std = ["alloc"]
defmt = ["dep:defmt"]
serial2 = ["dep:serial2", "serial2-tokio", "tokio"]
